--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,37 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Weather</title>
-  <base href="/">
+	<meta charset="utf-8">
+	<title>Weather</title>
+	<base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
+
+	<style>
+	html, body {		
+		height: 100%;
+	}
+	body {
+		padding: 0px;
+		margin: 0px;
+		background-color: #eee;
+		font-family: "Open Sans";
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+	}
+	input, select, textarea, button {
+		font-family: inherit;
+		font-size: inherit;
+		color: inherit;
+		box-sizing: border-box;
+	}
+	</style>
 </body>
 </html>
